releases/v1.1.0/README.md
# Release v1.1.0

**Created:** 2026-01-06
**Status:** In Progress
**Build:** 1
**Targeting:** DMG + App Store + Linux

## P0 Blockers (Linux)

Linux release requires Total Recall to be useful. These must be complete before release:

- [ ] `contextify-query` builds on Linux
- [ ] `contextify-query doctor` command implemented
- [ ] `install-plugin` creates skill files on Linux

**Spec:** `build/notes/todo-support/LINUX-TOTAL-RECALL-spec.md`

## Quick Status

| Phase | Status |
|-------|--------|
| 1. Pre-Release | Pending |
| 2. Build | Pending |
| 3. Review Materials | Pending |
| 4. Submission | Pending |
| 5. Marketing | Pending |
| 6. Post-Release | Pending |

## Checklists

- [`01-pre-release.md`](checklists/01-pre-release.md)
- [`02-build.md`](checklists/02-build.md)
- [`03-review-materials.md`](checklists/03-review-materials.md)
- [`04-submission.md`](checklists/04-submission.md)
- [`05-marketing.md`](checklists/05-marketing.md)
- [`06-post-release.md`](checklists/06-post-release.md)

## Files

- `release.json` - Complete release state
- `checklists/` - Phase checklists
- `artifacts/` - Build artifact references
- `logs/` - Validation outputs
- `assets/` - Screenshots, receipts

## Commands

```bash
# Check status
./scripts/release/status.sh 1.1.0

# Validate pre-release
./scripts/release/validate-pre-release.sh 1.1.0

# Reset for new build (preserves notes)
./scripts/release/init.sh 1.1.0 --reset
```
